# InsightActionShowcase

./: .gitignore  README.md  pyproject.toml
src/app/: config.py
src/app/database/: langchain_qdrant_wrapper.py
src/app/factory/: init_openai_chat_model.py  openai_chat_model.py  qdrant_langchain.py
src/app/prompts/: prompt.py
src/app/schemas/: action.py  insight.py  prompt.py
src/app/services/: action.py  action_service.py  approval.py  ingest.py  ingest_service.py  insight.py  insight_service.py  prompt.py  retriever_service.py
src/streamlit/: app.py
